<resources>
    <string name="app_name">MAD_tute</string>
    <string name="label_Number1">Number 01</string>
    <string name="label_Number2">Number 02</string>
    <string name="btn_Plus">+</string>
    <string name="btn_Minus">-</string>
    <string name="btn_Multiply">X</string>
    <string name="btn_Divide">/</string>
    <string name="answer">Answer</string>
    <string name="btn_back">Back</string>

    <string name="tvTitle">Register Student</string>
    <string name="edtStudentID">Enter Student ID</string>
    <string name="tvYear">Select Academic Year</string>
    <string name="tvSemester">Select the Semester</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnCancel">Cancel</string>
    <string name="cbAgreement">I agree to terms and conditions</string>
    <string-array name="years">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="semesters">
        <item></item>
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>

</resources>